// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberChange components basic render 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      false,
    ]
  }
>
  <TYText
    color="#000"
    size={16}
    text={0}
  />
</View>
`;

exports[`NumberChange components useUnitText render 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {
        "opacity": 0.5,
      },
    ]
  }
>
  <UnitText
    value="60"
    valueColor="#000"
    valueSize={16}
  />
</View>
`;
